--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
       function register(){
           $("#TB_window").css({'height':'370px'})
           $("#TB_ajaxContent").css({'height':'370px'})
-          $("#TB_ajaxContent").load('http://localhost/register.html?height=370;width=400')
-      }  
+          $("#TB_ajaxContent").load('http://localhost/register.php?height=370;width=400')
+      }
     </script>
 </html>
