--- a/register.html
+++ b/register.html
@@ -198,7 +198,7 @@
     function login(){
     $("#TB_window").css({'height':'370px'})
     $("#TB_ajaxContent").css({'height':'370px'})
-    $("#TB_ajaxContent").load('https://blog.lifezq.com/login.php?height=370;width=400')
+    $("#TB_ajaxContent").load('https://blog.lifezq.com/login.html?height=370;width=400')
     }
     </script>
     <script>
