--- a/comaccount.html
+++ b/comaccount.html
@@ -196,7 +196,7 @@
         function login(){
             $("#TB_window").css({'height':'280px'})
             $("#TB_ajaxContent").css({'height':'280px'})
-            $("#TB_ajaxContent").load('https://blog.lifezq.com/login.php?height=160;width=400')
+            $("#TB_ajaxContent").load('https://blog.lifezq.com/login.html?height=160;width=400')
         }  
     </script>
 <script>
