--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
       function register(){
           $("#TB_window").css({'height':'370px'})
           $("#TB_ajaxContent").css({'height':'370px'})
-          $("#TB_ajaxContent").load('https://blog.lifezq.com/register.php?height=370;width=400')
+          $("#TB_ajaxContent").load('https://blog.lifezq.com/register.html?height=370;width=400')
       }
     </script>
 </html>
