--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>登录  - 之晴博客 </title>
+<title>登录  - 之晴 </title>
 </head>
 <style type="text/css">
 	*{margin:0px;border:0px;padding:0px;}
@@ -36,9 +36,9 @@
 </style>
 <body>
 <div id="login">
-	<div id="title"><a href="https://blog.lifezq.com">之晴博客</a> - 用户登录</div>
+	<div id="title"><a href="https://lifezq.com">之晴</a> - 用户登录</div>
     <div style="width:320px;height:auto;margin:0px auto;">
-        <form action="https://blog.lifezq.com/admin/index.php?action=login&op=floated" method="post" target="registeriframe">
+        <form action="https://lifezq.com/admin/index.php?action=login&op=floated" method="post" target="registeriframe">
         <table id="loginbox" border="0" cellpadding="0" cellspacing="0">
             <tr style="height:30px">
                 <td class="bfont">用户名：</td>
@@ -50,7 +50,7 @@
             </tr>
             <tr style="height:30px">
                 <td class="bfont">验证码：</td>
-                <td><input class="verbox" type="text" name="imgcode"  size="5" maxlength="5"/> <img  src="https://blog.lifezq.com/include/lib/checkcode.php" onclick="this.src=this.src+'?'+Math.random()" class="verbox_img"/></td>
+                <td><input class="verbox" type="text" name="imgcode"  size="5" maxlength="5"/> <img  src="https://lifezq.com/include/lib/checkcode.php" onclick="this.src=this.src+'?'+Math.random()" class="verbox_img"/></td>
             </tr>
             <tr>
                 <td  colspan="2" align="center"><input id="ispersis" type="checkbox" value="1" name="ispersis"/> <label for="ispersis">记住密码</label></td>
@@ -83,7 +83,7 @@
       function register(){
           $("#TB_window").css({'height':'370px'})
           $("#TB_ajaxContent").css({'height':'370px'})
-          $("#TB_ajaxContent").load('https://blog.lifezq.com/register.html?height=370;width=400')
+          $("#TB_ajaxContent").load('https://lifezq.com/register.html?height=370;width=400')
       }
     </script>
 </html>
