improve and updated..

--- a/treaty.html
+++ b/treaty.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>使用协议说明  - 之晴博客 - php建站知识分享</title>
+<title>使用协议说明  - </title>
         <style>
             body{width:470px;text-indent: 2em;background:#FFF1A8;}
             #content{width:440px;padding:0 10px;font-size:12px;line-height:22px;}
@@ -13,10 +13,10 @@
         </style>
     </head>
     <body>
-        <h3 class="tocenter">之晴博客《使用协议说明》</h3>
+        <h3 class="tocenter">《使用协议说明》</h3>
         <div id="content">
 
-            <p>注册之晴博客后，您将成为之晴会员，届时您可以发表文章，
+            <p>注册后，您将成为之晴会员，届时您可以发表文章，
   发表碎语。并管理自己的日志文章碎语等。</p>
             <p>如果你接受协议，表示您已经同意之晴博客使用以下条例：</p>
             <p>1.之晴博客为个人站，此站主要为技术分享，资料共享，下载等。
