--- a/treaty.html
+++ b/treaty.html
@@ -18,8 +18,8 @@
 
             <p>注册后，您将成为之晴会员，届时您可以发表文章，
   发表碎语。并管理自己的日志文章碎语等。</p>
-            <p>如果你接受协议，表示您已经同意之晴博客使用以下条例：</p>
-            <p>1.之晴博客为个人站，此站主要为技术分享，资料共享，下载等。
+            <p>如果你接受协议，表示您已经同意之晴网使用以下条例：</p>
+            <p>1.之晴网为个人站，此站主要为技术分享，资料共享，下载等。
                 在站内不得发色情，不良文章，以及和本博客无关的文章。如有
   发现，第一次予以删除，并给予警告，发现第二次直接封号处理。</p>
             <p>
